styles.css
body {
    background: #00ee99;
}

#playing-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
    width: 80%;
    padding: 30px;
    margin: 0 auto;
}

.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background: #fff;
    width: clamp(140px, 20vw, 200px);
    height: clamp(210px, 30vw, 300px);
    padding: 2rem;
    border-radius: 1rem;
    font-size: 2.5rem;
    box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.5);
}

.card.red {
    color: #ff0000;
}

.left {
    align-self: flex-start;
}

.middle {
    align-self: center;
    display: flex;
    flex-direction: column;
    align-items: center
}

.right {
    align-self: flex-end;
    transform: rotate(180deg);
}

